--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <main class="main">
         <article class="person">
             <img class="person__picture" src="avatar.png" alt="Zdjęcie Imię i nazwisko">
+            <div>
             <header class="person__info">
                 <h1 class="person__name">Imię i nazwisko</h1>
                 <p class="person__position">stanowisko</p>
             </header>
-            <p class="person__description">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. </p>
+            <p class="person__description person__description--margin">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. </p>
 
             <p class="person__description">  W sieci: <a class="person__link" href="#">Facebook</a>, <a class="person__link" href="#">GitHub</a>, <a class="person__link" href="#">Instagram</a>.</p>
+        </div>
         </article>
     </main>
 </body>
