--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="person__name">Imię i nazwisko</h1>
                 <p class="person__position">stanowisko</p>
             </header>
-            <p class="person__description person__description--margin">Programista z <strong class="special">kilkunastoletnim doświadczeniem</strong>, fotograf, operator drona, właściciel Sokoła Millennium (na razie tylko z Lego), <strong class="special">prelegent i szkoleniowiec</strong>. Uwielbia eksperymentować z nowymi technologiami, w swojej twórczości ocierając się o sztukę. </p>
+            <p class="person__description person__description--margin">Początkujący programista z <strong class="special">pasją i chęciami</strong>, fotograf, zafascynowany gitarą i muzyką, <strong class="special">na co dzień automatyk</strong>. Uwielbiam dziedziny, które pozwalają na twórcze oddanie się pracy.</p>
 
             <p class="person__description">  W sieci: <a class="person__link" href="#">Facebook</a>, <a class="person__link" href="#">GitHub</a>, <a class="person__link" href="#">Instagram</a>.</p>
         </div>
