--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <img class="person__picture" src="avatar.png" alt="Zdjęcie Imię i nazwisko">
             <div>
             <header class="person__info">
-                <h1 class="person__name">Imię i nazwisko</h1>
-                <p class="person__position">stanowisko</p>
+                <h1 class="person__name">Andrzej Kuźmicki</h1>
+                <p class="person__position">Początkujący Frontend Developer</p>
             </header>
             <p class="person__description person__description--margin">Początkujący programista z <strong class="special">pasją i chęciami</strong>, fotograf, zafascynowany gitarą i muzyką, <strong class="special">na co dzień automatyk</strong>. Uwielbiam dziedziny, które pozwalają na twórcze oddanie się pracy.</p>
 
